    in X.

  [ Colin Watson ]
  * Ignore comments and blank lines in manifest files, so that we can put
    comments there to help out customisers.
  * GTK frontend:
    - Make label text selectable (closes: Malone #41618).
    - Guard against calling gtk.main_quit() outside of a main loop when
      quitting (closes: Malone #41619).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 26 Apr 2006 12:42:01 +0100

ubiquity (0.99.67) dapper; urgency=low

  * Don't dh_install to ubiquity-frontend-{gtk,kde} if the respective
    UBIQUITY_NO_{GTK,KDE} is defined.
  * GTK and KDE frontends:
    - Add a crash handler UI.
  * Turn internal (non-debconf) debugging on by default; it can be disabled
    by setting UBIQUITY_DEBUG_CORE=0. Debconf debugging is unfortunately not
    safe to enable by default because it logs the user's password.
  * Write out /target/etc/apt/apt.conf.d/00IgnoreTimeConflict for the
    duration of post-copy configuration to avoid problems on clock-skewed
    machines.
  * KDE frontend:
    - Fix tab order, chiefly on user info page (closes: Malone #40520).
  * Configure networking before apt, so that we can contact mirrors.
  * Automatic update of included source packages: apt-setup
    1:0.10ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 25 Apr 2006 20:24:59 +0100

ubiquity (0.99.66) dapper; urgency=low

  [ Colin Watson ]
  * Make for loops in debian/rules exit properly on errors.
  * Allow defining UBIQUITY_NO_GTK or UBIQUITY_NO_KDE during the build to
    avoid making use of GTK- or KDE-specific build-dependencies
    (respectively). This is useful to cut down on the number of
    build-dependencies needed when testing on a live CD.
  * If ubiquity is started with no arguments, try both the gtkui and kde-ui
    frontends rather than just gtkui.
  * Explicitly return Unicode strings from ubiquity.misc.get_string(),
    simplifying the KDE frontend.
  * Add a no-op anna-install shim for localechooser, ensuring that locales
    are generated.